# 4-laba-oop

./: CMakeLists.txt  main.cpp
include/: Array.h  Figure.h
tests/: test_figures.cpp
